# python-modern-template

./: .aider.conf.yml  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_INSTRUCTIONS_SUMMARY.md  AI_QUICK_REFERENCE.md  CHANGELOG.md  CLAUDE.md  COPILOT_INSTRUCTIONS.md  GEMINI.md  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  TEMPLATE_DEVELOPMENT.md  copier.yml  pyproject.toml  sync_template.py
.ai-context/: ACTIVE_TASKS.md  ACTIVE_TASKS.md.example  CONVENTIONS.md  CONVENTIONS.md.example  LAST_SESSION_SUMMARY.md  LAST_SESSION_SUMMARY.md.example  NEXT_SESSION_PLAN.md  PLAN-task-specific-checklists-improvement.md  RECENT_DECISIONS.md  RECENT_DECISIONS.md.example  REQUIRED_READING.md
.claude/: INSTRUCTIONS.md
.claude/agents/: quality-enforcer.md  tdd-reviewer.md
.claude/skills/coverage-analyzer/: SKILL.md
.claude/skills/quality-fixer/: SKILL.md
.claude/skills/session-template/: SKILL.md
.claude/skills/test-generator/: SKILL.md
.claude/skills/test-generator/templates/: test_async.py  test_class.py
.gemini/: styleguide.md
.github/: RELEASE_NOTES_v1.0.0.md  copilot-instructions.md
.github/workflows/: ci.yml  test-template.yml
AI_DOCS/: README.md  ai-skills.md  ai-tools.md  code-conventions.md  documentation-first-approach.md  documentation-sync-rules.md  project-context.md  tdd-workflow.md
examples/: .gitkeep  README.md  generate-all.sh
scripts/: validate_ai_instructions.py
scripts/ai_tools/: finish_task.py  summarizer.py
scripts/ai_tools/templates/: bugfix.md  docs.md
scripts/quality/: __init__.py  check.py  config.py  format.py  security.py
src/leadership_blog_generator/: __init__.py  main.py
src/python_modern_template/: __init__.py  main.py  validate_ai_docs_sync.py
template/: .aider.conf.yml  .aider.conf.yml.jinja  .cursorrules  .cursorrules.jinja  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml.jinja  AGENTS.md  AGENTS.md.jinja  CLAUDE.md  CLAUDE.md.jinja  Dockerfile.jinja  GEMINI.md.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  docker-compose.yml.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
template/.ai-context/: ACTIVE_TASKS.md  CONVENTIONS.md  LAST_SESSION_SUMMARY.md  RECENT_DECISIONS.md
template/.claude/agents/: quality-enforcer.md.jinja  tdd-reviewer.md.jinja
template/.claude/skills/coverage-analyzer/: SKILL.md.jinja
template/.claude/skills/quality-fixer/: SKILL.md.jinja
template/.claude/skills/test-generator/: SKILL.md.jinja
template/.claude/skills/test-generator/templates/: test_function.py  test_parametrized.py
template/.gemini/: styleguide.md  styleguide.md.jinja
template/.github/: copilot-instructions.md  copilot-instructions.md.jinja
template/.github/workflows/: ci.yml  ci.yml.jinja
template/AI_DOCS/: README.md  ai-skills.md.jinja  ai-tools.md  ai-tools.md.jinja  code-conventions.md  code-conventions.md.jinja  documentation-first-approach.md.jinja  documentation-sync-rules.md.jinja  project-context.md  project-context.md.jinja  tdd-workflow.md  tdd-workflow.md.jinja
template/docs/: changelog.md.jinja  contributing.md.jinja  index.md.jinja
template/docs/api/: index.md
template/docs/getting-started/: installation.md.jinja  quickstart.md.jinja
template/docs/user-guide/: overview.md
template/scripts/: __init__.py
template/scripts/ai_tools/: __init__.py.jinja  add_convention.py  add_decision.py.jinja  check_conflicts.py.jinja  context_summary.py  finish_task.py.jinja  log_execution.py  log_execution.py.jinja  start_task.py  start_task.py.jinja  template_loader.py  template_loader.py.jinja  update_plan.py  update_plan.py.jinja  utils.py.jinja  validate_ai_docs_sync.py.jinja
template/scripts/ai_tools/templates/: feature.md  refactor.md
template/scripts/quality/: __init__.py  check.py.jinja  config.py.jinja  format.py.jinja  lint.py.jinja  security.py.jinja  test.py.jinja
template/src/{{ package_name }}/: __init__.py.jinja  main.py.jinja  validate_ai_docs_sync.py.jinja
template/tests/: __init__.py  conftest.py.jinja  test_dependencies.py.jinja  test_docs.py.jinja  test_main.py.jinja  test_makefile.py.jinja  test_validate_ai_docs_sync.py.jinja
template/tests/ai_tools/: conftest.py  test_finish_task.py.jinja  test_template_loader.py  test_template_loader.py.jinja  test_update_plan.py  test_update_plan_extended.py.jinja  test_update_plan_fuzzy.py.jinja
template/tests/quality/: __init__.py  test_config.py.jinja  test_format.py.jinja  test_lint.py.jinja  test_security.py.jinja  test_test.py.jinja
tests/: __init__.py  conftest.py  test_dependencies.py  test_docs.py  test_main.py  test_makefile.py  test_validate_ai_docs_sync.py
tests/ai_tools/: __init__.py  test_context_summary.py  test_finish_task.py  test_log_execution.py  test_start_task.py  test_summarizer.py  test_update_plan_backward_compat.py  test_update_plan_validation.py
tests/quality/: __init__.py  test_check.py
