[project]
name = "python-modern-template"
version = "1.0.0"
description = "A comprehensive Copier template for modern Python projects with quality enforcement, AI-assisted development, Docker support, and extensive tooling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Atyantik Technologies Private Limited", email = "contact@atyantik.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
keywords = [
    "python", "template", "copier", "project-template", "scaffolding",
    "tdd", "quality-tools", "ai-assisted", "docker", "mkdocs",
    "pytest", "mypy", "ruff", "black", "pre-commit"
]
dependencies = []

[project.scripts]
python-modern-template = "python_modern_template.main:main"

# AI Tools
ai-start-task = "scripts.ai_tools.start_task:main"
ai-log = "scripts.ai_tools.log_execution:main"
ai-update-plan = "scripts.ai_tools.update_plan:main"
ai-finish-task = "scripts.ai_tools.finish_task:main"
ai-context-summary = "scripts.ai_tools.context_summary:main"
ai-check-conflicts = "scripts.ai_tools.check_conflicts:main"
ai-add-decision = "scripts.ai_tools.add_decision:main"
ai-add-convention = "scripts.ai_tools.add_convention:main"

# Quality Tools - Single source of truth for quality checks
quality-format = "scripts.quality.format:main"
quality-lint = "scripts.quality.lint:main"
quality-test = "scripts.quality.test:main"
quality-security = "scripts.quality.security:main"
quality-check = "scripts.quality.check:main"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pylint>=3.2.7",
    "pytest>=8.3.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.5",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]
per-file-ignores = {"scripts/ai_tools/*.py" = ["SIM105"]}
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow certain patterns
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

# Exclude pre-existing AI tools with type issues
exclude = [
    "scripts/ai_tools/check_conflicts.py",
    "scripts/ai_tools/finish_task.py",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.ai_tools.*"
# Disable strict checking for pre-existing AI tools
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pylint.main]
py-version = "3.13"
ignore-patterns = ["test_.*?py", "conftest.py"]
ignore-paths = ["^scripts/ai_tools/.*$"]
jobs = 0
limit-inference-results = 100
persistent = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/ai_tools/test_context_summary.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["python_modern_template*", "scripts*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["py.typed"]

# Quality Tool Configuration - Single Source of Truth
[tool.quality]
# Paths to check with formatters and linters
code_paths = ["src", "tests", "scripts"]
# Paths to run tests on
test_paths = ["tests"]
# Minimum coverage percentage
min_coverage = 80
